--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=Vanilla Garden
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=false
@@ -11,7 +11,9 @@ NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
 STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-hidden-frameless obsidian-app is-maximized show-inline-title show-ribbon show-view-header css-settings-manager is-focused
-USE_FULL_RESOLUTION_IMAGES=false
+USE_FULL_RESOLUTION_IMAGES=true
+THEME=https://raw.githubusercontent.com/sergey900553/obsidian_githublike_theme/HEAD/theme.css
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
